# os-devel-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  MODEL_CONFIGURATION.md  USER_GUIDE.md
src/: config.py  main.py
src/agent/: core.py
src/code_agent/: agent.py  chunking_treesitter.py  cli.py  config.py  context_packer.py  repo_map.py  repo_scan.py  store.py  util.py
src/code_agent/retrievers/: __init__.py  base.py  bm25.py  hybrid.py  symbol.py
src/indexing/: parser.py  vector_store.py
src/utils/: ollama_embedding.py
tests/: test_integration.py  test_vector_store.py
