[project]
name = "code_agent"
version = "0.1.0"
description = "Role/Responsibility/Boundary oriented Code RAG skeleton"
requires-python = ">=3.10"
dependencies = [
  "tree_sitter>=0.21.0",
  "tree_sitter_languages>=1.10.0",
  "rank-bm25>=0.2.2",
  "tqdm>=4.66.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
